I maked loading window. I'm sorted files in folders, but now we have some useless files xD. I think I will delete them soon...

--- a/Niero.csproj
+++ b/Niero.csproj
@@ -6,4 +6,22 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove=".gitignore" />
+    <None Remove="Gifs\Main.gif" />
+    <None Remove="Images\Main.gif" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WpfAnimatedGif" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Gifs\Main.gif" />
+  </ItemGroup>
+
 </Project>
