--- a/Niero.csproj
+++ b/Niero.csproj
@@ -21,6 +21,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="NieroNetLib">
+      <HintPath>..\NieroNetLib\bin\Debug\netcoreapp3.1\NieroNetLib.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="Gifs\Main.gif" />
   </ItemGroup>
 
