--- a/Niero.csproj
+++ b/Niero.csproj
@@ -11,6 +11,7 @@
     <None Remove="Images\Main.gif" />
     <None Remove="SupportDictionaries\Fonts\FontAwesome.otf" />
     <None Remove="SupportDictionaries\Fonts\MagicFont.ttf" />
+    <None Remove="SupportDictionaries\Fonts\NierAutomataFont.ttf" />
   </ItemGroup>
 
   <ItemGroup>
@@ -28,6 +29,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
     <Resource Include="SupportDictionaries\Fonts\MagicFont.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="SupportDictionaries\Fonts\NierAutomataFont.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
   </ItemGroup>
