--- a/Niero.csproj
+++ b/Niero.csproj
@@ -6,6 +6,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath></OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>Release\</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Gifs\Main.gif" />
     <None Remove="Images\Main.gif" />
