So ... After a week of downtime and several days of work, I want to fix the following changes: 1) Added YoRHa welcome screen as a page 2) Added a new table of inactive adapters 3) Borders of active and inactive adapters now contain full-fledged DataGrids (I was worn out with this ...) 4) In general, a lot of garbage was removed from the ViewModel of the information page, and some refactoring of what remained untouched was performed.
From this point on, I can fully start adding functionality (at least to the network information page).

--- a/Niero.csproj
+++ b/Niero.csproj
@@ -41,6 +41,7 @@
     <None Remove="DesignDictionaries\Cursors\Vertical Resize.ani" />
     <None Remove="DesignDictionaries\Cursors\Working in Background.ani" />
     <None Remove="DesignDictionaries\Fonts\RodinFont.ttf" />
+    <None Remove="Gifs\LoadingScreenFullHD.mp4" />
     <None Remove="Gifs\Main.gif" />
     <None Remove="Gifs\NierRobot.gif" />
     <None Remove="DesignDictionaries\Fonts\FontAwesome.otf" />
@@ -68,6 +69,9 @@
     <Resource Include="DesignDictionaries\Fonts\NierAutomataFont.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Resource>
+    <EmbeddedResource Include="Gifs\LoadingScreenFullHD.mp4">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <Resource Include="Images\MainBackground_16x9.png" />
     <EmbeddedResource Include="DesignDictionaries\Cursors\Alternate Select.ani" />
     <EmbeddedResource Include="DesignDictionaries\Cursors\Busy.ani" />
