Added a network data model, thanks to which I was able to transfer calculations from the page view model to this model. With this change, all pages will easily get access to the "DataHub"-s they need and the data that is stored and calculated in them. (Should have done this from the beginning). Now I can proceed to finalizing the interface for outputting scan results.

--- a/Niero.csproj
+++ b/Niero.csproj
@@ -48,6 +48,7 @@
     <None Remove="DesignDictionaries\Fonts\MagicFont.ttf" />
     <None Remove="DesignDictionaries\Fonts\NierAutomataFont.ttf" />
     <None Remove="Images\MainBackground_16x9.png" />
+    <None Remove="Sounds\EnterAction.wav" />
   </ItemGroup>
 
   <ItemGroup>
@@ -73,6 +74,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <Resource Include="Images\MainBackground_16x9.png" />
+    <Resource Include="Sounds\EnterAction.wav" />
     <EmbeddedResource Include="DesignDictionaries\Cursors\Alternate Select.ani" />
     <EmbeddedResource Include="DesignDictionaries\Cursors\Busy.ani" />
     <EmbeddedResource Include="DesignDictionaries\Cursors\Diagonal Resize 1.ani" />
