--- a/Niero.csproj
+++ b/Niero.csproj
@@ -43,6 +43,7 @@
     <None Remove="DesignDictionaries\Fonts\RodinFont.ttf" />
     <None Remove="EmbeddedSounds\BackspacePress.wav" />
     <None Remove="EmbeddedSounds\CloseAction.wav" />
+    <None Remove="EmbeddedSounds\Copied.wav" />
     <None Remove="EmbeddedSounds\EnterAction.wav" />
     <None Remove="EmbeddedSounds\ErrorShort.wav" />
     <None Remove="EmbeddedSounds\Hover.wav" />
@@ -61,8 +62,10 @@
     <None Remove="DesignDictionaries\Fonts\MagicFont.ttf" />
     <None Remove="DesignDictionaries\Fonts\NierAutomataFont.ttf" />
     <None Remove="Images\MainBackground_16x9.png" />
+    <None Remove="Images\White Contract %28Nier%29.png" />
     <None Remove="Sounds\BackspacePress.wav" />
     <None Remove="Sounds\CloseAction.wav" />
+    <None Remove="Sounds\Copied.wav" />
     <None Remove="Sounds\EnterAction.wav" />
     <None Remove="Sounds\ErrorShort.wav" />
     <None Remove="Sounds\Hover.wav" />
@@ -77,6 +80,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Management" Version="5.0.0" />
     <PackageReference Include="WpfAnimatedGif" Version="2.0.0" />
   </ItemGroup>
 
@@ -88,6 +92,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Gifs\NierRobot.gif">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Images\White Contract (Nier).png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Sounds\BackspacePress.wav">
@@ -106,6 +113,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="EmbeddedSounds\CloseAction.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EmbeddedSounds\Copied.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </EmbeddedResource>
     <EmbeddedResource Include="EmbeddedSounds\ErrorShort.wav">
@@ -145,6 +155,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Sounds\CloseAction.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+    <Resource Include="Sounds\Copied.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
     <Resource Include="Sounds\ErrorShort.wav">
